--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  padding: env(safe-area-inset);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -16,6 +20,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   overscroll-behavior: none;
+  touch-action: none;
 }
 
 @import url("./fonts.css");
